--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content3 cid-rQbUgujYzw" id="content3-n">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content3 cid-rQbUgujYzw" id="content3-n">
       
      
 
@@ -170,7 +170,7 @@
                     </div>          
                     <div class="step-text-content">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">De app openen &amp; voorbereiding</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7"><strong><br></strong><strong>Geef toestemming</strong><br>Wanneer je de app voor de eerste keer opent, moet je een aantal toestemmingen geven om de app optimaal te laten werken. Daarna wordt er gevraagd je e-mailadres in te geven. Zo kunnen wij je contacteren als we problemen zouden detecteren.<br><br><strong>Zoom in naar het inventarisatiegebied<br></strong>Tijdens het infomoment of via de website van de gemeente heb je een gebied (of meerdere gebieden) kunnen kiezen om te inventariseren. Je kan thuis al eens inzoomen naar jouw gekozen zone. Op die manier komt dit in het werkgeheugen van je toestel en zal de kaart op het terrein sneller laden.<br><br><strong>Kaarten op papier</strong><br>Je hebt ook de detailkaarten van de 'hokjes' ontvangen die in jouw gekozen zone liggen. Je kan deze kaarten op papier als hulpmiddel meenemen, om beter het overzicht te bewaren tijdens het inventariseren.<br><br><strong>Controleer of de batterij van je toestel goed is opgeladen.</strong><br></p>
+                        <p class="mbr-step-text mbr-fonts-style display-7"><strong><br></strong><strong>Geef toestemming</strong><br>Wanneer je de app voor de eerste keer opent, moet je een aantal toestemmingen geven om de app optimaal te laten werken. Daarna wordt er gevraagd je e-mailadres in te geven. Zo kunnen wij je contacteren als we problemen zouden detecteren.<br><br><strong>Zoom in naar het inventarisatiegebied<br></strong>Tijdens het infomoment of via de website van de gemeente heb je een gebied (of meerdere gebieden) kunnen kiezen om te inventariseren. Je kan thuis al eens inzoomen naar jouw gekozen zone. Op die manier komt dit in het werkgeheugen van je toestel en zal de kaart op het terrein sneller laden. Soms moet je eens op het pijltje onderaan op je scherm klikken om de kaart te 'verversen' en zo de trage wegen te laten verschijnen.<br><br><strong>Kaarten op papier</strong><br>Je hebt ook de detailkaarten van de 'hokjes' ontvangen die in jouw gekozen zone liggen. Je kan deze kaarten op papier als hulpmiddel meenemen, om beter het overzicht te bewaren tijdens het inventariseren.<br><br><strong>Controleer of de batterij van je toestel goed is opgeladen.</strong><br></p>
                     </div>
                 </div>
             </div>
@@ -222,8 +222,7 @@
                     </div>          
                     <div class="step-text-content">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Ga op pad</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">
-                            <br><strong>Voor u op pad gaat:</strong><br>&gt; Zet de WIFI uit<br>&gt; Zet de MOBIELE DATA aan<br>&gt; Zet de locatie aan<br><br><strong>LEGENDE</strong><br>De trage wegen hebben in de app een specifieke kleur, afhankelijk van hun toegankelijkheid en of ze al dan niet geïnventariseerd zijn..<br></p>
+                        <p class="mbr-step-text mbr-fonts-style display-7"><br>&gt; zet WIFI uit<br>&gt; zet INTERNET / MOBIELE DATA aan<br>&gt; zet de LOCATIE / GPS aan<br>&gt; open de APP<br><br><strong>LEGENDE</strong><br>De trage wegen hebben in de app een specifieke kleur. Wanneer je ver uitgezoomd bent, zijn ze oranje. Zoom je in dan worden ze paars of grijs afhankelijk van hun basisstatuut. En wanneer een weg geïnventariseerd is, krijgt deze nadien een kleur die overeen komt met de mate van toegankelijkheid.<br></p>
                     </div>
                 </div>
             </div>
