--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section article content3 cid-rQbUgujYzw" id="content3-n">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section article content3 cid-rQbUgujYzw" id="content3-n">
       
      
 
@@ -601,7 +601,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-12"><p><strong>AANDACHTSPUNTEN</strong><br></p><p>Vergeet niet telkens van wegsegment te veranderen.</p><p>Is een weg verdwenen of ontoegankelijk? Doe dan zeker ook een controle aan de andere kant van de weg.&nbsp;<span style="font-size: 1.1rem;">De gegevens die je voor een weg misschien al hebt verzonden kan je bij een fout steeds overschrijven met een nieuwe inventaris.</span></p><p>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-12"><p><strong>AANDACHTSPUNTEN!</strong><br></p><p>Vergeet niet telkens van wegsegment te veranderen.</p><p>Is een weg verdwenen of ontoegankelijk? Doe dan zeker ook een controle aan de andere kant van de weg.&nbsp;<span style="font-size: 1.1rem;">Reeds verzonden gegevens kan je bij een fout steeds overschrijven met een nieuwe inventaris.</span></p><p>
 </p><p>Nadat je een inventaris hebt verzonden, wordt de kleur van de weg een tijdje later automatisch aangepast (groen = toegankelijk,         rood = ontoegankelijk of verdwenen).</p><p><span style="font-size: 1.1rem;">Duid geïnventariseerde wegen eventueel aan op de papieren kaart.</span></p></div>
         </div>
     </div>
