--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section article content3 cid-rQbUgujYzw" id="content3-n">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article content3 cid-rQbUgujYzw" id="content3-n">
       
      
 
@@ -629,7 +629,7 @@
 <br>&gt; sluit de APP<br><br><strong>Terug thuis:</strong> 
 <br>&gt; zet WIFI aan 
 <br>&gt; open de APP en kies in het menu linksboven 'Foto's verzenden' en wacht tot alle foto's verzonden zijn. Dit kan even duren. 
-<br>&gt; Nadat de foto's verzonden zijn kies je in het menu voor 'Cache keegmaken', zowel de 'Foto verzendlijst' als 'Trage wegen'.<br><br>Sluit de app. Je bent nu helemaal klaar.
+<br>&gt; nadat de foto's verzonden zijn kies je in het menu voor 'Cache leegmaken', zowel de 'Foto verzendlijst' als 'Trage wegen'.<br><br>Sluit de app. Je bent nu helemaal klaar.
 <br>
 <br><strong>Heel erg bedankt voor jouw bijdrage!</strong><br></p>
                     </div>
